fix: no users found align message

--- a/src/pages/users.css
+++ b/src/pages/users.css
@@ -71,6 +71,10 @@ header {
   background-color: #E94646;
 }
 
+.no-users-found {
+  text-align: center;
+}
+
 @media screen and (max-width: 768px) {
   .users {
     padding: 0;
